--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "gray-matter": "^4.0.3",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
