--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.1.2",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "zustand": "^4.4.1"
   }
 }
